# house-backend

./: LICENSE.md  README.md  main.py  pyproject.toml
backend/: fastapi_backend.py  models.py  prompting.py  user_card.py
langchain/: pyvenv.cfg
scripts/: prompt_test.ipynb
